Fixed random black backgound when having no scores on mobile

--- a/src/page-stuff/css/songview.css
+++ b/src/page-stuff/css/songview.css
@@ -197,7 +197,6 @@
 
 .individualScoreTable {
     overflow: auto;
-    background-color: black;
 }
 
 .componentScoreTable tr th
